Some styling/spacing fixes

--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -106,7 +106,7 @@ div.intro-container {
         align-items: center;
 
         div.text {
-            font-size: 20px;
+            font-size: 24px;
             
             text-align: right;
             margin-right: 50px;
