--- a/src/components/main_content/navigation_menu/ContentNavigationMenu.scss
+++ b/src/components/main_content/navigation_menu/ContentNavigationMenu.scss
@@ -6,6 +6,9 @@ div.content-navigation-container {
     max-height: 300px;
 
     padding: 10px;
+    font-size: 20px;
+
+    font-family: sans-serif;
 
     div.content-navigation-menu {
         padding: 20px;
