--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html,body
     overflow-x: hidden;
 
     /* default font size */
-    font-size: 20px;
+    font-size: 24px;
 }
 
 html {
